// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileInformationAuthenticationSourceBackLink />  renders correctly when AMR is helsinkiAccountAMR should render helsinki account link as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <div
    className="container"
  >
    <div
      className="label-section"
    >
      <LabeledValue
        label="profileInformation.authenticationMethod"
        value="identityProvider.helsinkiAccount"
      >
        <div
          className="wrapper"
        >
          <strong
            className="label"
          >
            profileInformation.authenticationMethod
          </strong>
          <span
            className="value"
          >
            identityProvider.helsinkiAccount
          </span>
        </div>
      </LabeledValue>
    </div>
  </div>
</AuthenticationProviderInformation>
`;

exports[`<ProfileInformationAuthenticationSourceBackLink />  renders correctly when AMR is tunnistusSuomifiAMR should render suomi.fi link as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <div
    className="container"
  >
    <div
      className="label-section"
    >
      <LabeledValue
        label="profileInformation.authenticationMethod"
        value="identityProvider.tunnistusSuomifi"
      >
        <div
          className="wrapper"
        >
          <strong
            className="label"
          >
            profileInformation.authenticationMethod
          </strong>
          <span
            className="value"
          >
            identityProvider.tunnistusSuomifi
          </span>
        </div>
      </LabeledValue>
    </div>
  </div>
</AuthenticationProviderInformation>
`;
